--- a/package.json
+++ b/package.json
@@ -11,14 +11,21 @@
     "test": "jest"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
     "@babel/preset-env": "^7.27.2",
     "@babel/preset-react": "^7.27.1",
+    "@tailwindcss/vite": "^4.1.10",
     "@testing-library/jest-dom": "^6.6.3",
+    "antd": "^5.26.0",
     "jest": "^30.0.0",
     "jest-axe": "^10.0.0",
     "jest-environment-jsdom": "^30.0.0",
+    "lucide-react": "^0.515.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
+    "react-router-dom": "^7.6.2",
+    "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
