feat (API integration | Responsiveness | unit test): implement performance Optimisation using SWR - use SWR and fetch for API integration to improve performance - work on responsiveness fix - write unit test with two test cases for the search-reusable component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,11 +2,10 @@
   "compilerOptions": {
     "target": "esnext",
     "module": "esnext",
-    "jsx": "react",
+    "jsx": "react-jsx",
     "moduleResolution": "node",
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "tsx": "react",
     "types": ["jest", "@testing-library/jest-dom"]
   },
   "files": [],
